@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12)
 
 project(pyIbex)
-set(PACKAGE_VERSION "1.5.0rc3")
+set(PACKAGE_VERSION "1.5.1")
 
 # build type
 IF(NOT CMAKE_BUILD_TYPE)
