@@ -1,4 +1,4 @@
-version: 1.5.0rc3
+version: 1.5.1
 os: Visual Studio 2015
 clone_folder: C:\projects\pyIbex
 test: off
@@ -76,6 +76,7 @@ deploy:
   artifact: pip_wheel
 
   draft: true
+  appveyor_repo_tag: true        # deploy on tag push only
   # - ps: >-
   #
   #     $env:PYTHON_EXE -m twine upload --skip-existing -m $env:USERNAME -p $env:PASSWORD $artifacts[pip_wheel].path
