@@ -1,4 +1,5 @@
 from .pyibex import *
 from .pysivia import pySIVIA
+from .version import __version__
 
 # try to import geometry module
